_docs/v0.24/administration-guide/08-configuration-settings.md
---
version: v0.24
category: Administration-Guide
title: '08 Configuration Settings'
source_url: 'https://github.com/metabase/metabase/blob/master/docs/administration-guide/08-configuration-settings.md'
layout: docs
---

## Settings
Here are a few other miscellaneous settings you can configure from the home page of the **Admin Panel**.

### Site Name
How you’d like to refer to this instance of Metabase.

### Site URL
The base URL of this Metabase instance. The base URL is used in emails to allow users to click through to their specific instance. Make sure to include http:// or https:// to make sure it’s reachable.

### Report Timezone
The **report timezone** sets the default time zone for displaying times. The timezone is used when breaking out data by dates.  

*Setting the default timezone will not change the timezone of any data in your database*. If the underlying times in your database aren't assigned to a timezone, Metabase will use the report timezone as the default timezone.  

### Anonymous Tracking
This option turns determines whether or not you allow anonymous data about your usage of Metabase to be sent back to us to help us improve the product. *Your database’s data is never tracked or sent*.

---

## Next: Setting up Slack
If you want to use Slack to enhance the Metabase experience then lets do that now. Let’s learn [how to setup Slack](09-setting-up-slack.html).
